@@ -1,3 +1,10 @@
+2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Move "fopen w+ truncates" check to configure.in.
+
+	* configure.in: Add check for "fopen w+ truncates".
+	(BAD_FOPEN_WPLUS): New AC_DEFINE_UNQUOTED.
+
 2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Move "signal zaps handler" check to configure.in.
